--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.2",
     "nuxt": "^4.0.3",
     "nuxt-auth-utils": "0.5.23",
+    "nuxt-i18n-micro": "^1.90.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.18",
