--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "packageManager": "pnpm@10.8.1+sha256.d8b2ebbc65cf02c349eca6b45c9640b910f16b6adebdb7b926e9db440e47cac7",
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.63",
     "@iconify-json/tabler": "^1.2.22"
   }
 }
