--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@nuxt/ui": "4.0.0-alpha.0",
     "@pinia/nuxt": "^0.11.2",
+    "echarts": "^6.0.0",
     "nuxt": "^4.0.3",
     "nuxt-auth-utils": "0.5.23",
+    "nuxt-echarts": "1.0.0",
     "nuxt-i18n-micro": "^1.90.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.18",
+    "vue-echarts": "^8.0.0-beta.1",
     "vue-router": "^4.5.1"
   },
   "packageManager": "pnpm@10.8.1+sha256.d8b2ebbc65cf02c349eca6b45c9640b910f16b6adebdb7b926e9db440e47cac7",
